--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   smooth_page_indicator: ^1.1.0
   shared_preferences: ^2.2.3
   get_it: ^7.6.7
+  flutter_bloc: ^8.1.5
 
 dev_dependencies:
   flutter_test:
